--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,12 +3,12 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
+  "dev": "vite"
+},
+
+  
   "dependencies": {
     "axios": "^1.13.4",
     "react": "^19.2.0",
