--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,11 +5,12 @@
   "type": "module",
 
   "scripts": {
-  "dev": "vite"
-},
-
-  
-  "dependencies": {
+  "start": "react-scripts start",
+  "build": "react-scripts build",
+   "dev": "vite",
+   "preview": "vite preview"
+  },
+   "dependencies": {
     "axios": "^1.13.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
