--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,18 +3,18 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-
   "scripts": {
-  "start": "react-scripts start",
-  "build": "react-scripts build",
-   "dev": "vite",
-   "preview": "vite preview"
+    "start": "react-scripts start",
+    "build": "react-scripts build",
+    "dev": "vite",
+    "preview": "vite preview"
   },
-   "dependencies": {
+  "dependencies": {
     "axios": "^1.13.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-router-dom": "^7.13.0"
+    "react-router-dom": "^7.13.0",
+    "react-scripts": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
