--- a/render.yaml
+++ b/render.yaml
@@ -17,7 +17,7 @@ services:
         generateValue: true
       - key: NODE_ENV
         value: production
-    plan: free
+    
 
   # Frontend - React Static Site
   - type: web
@@ -28,6 +28,10 @@ services:
     rootDir: frontend
     buildCommand: npm install && npm run build
     staticPublishPath: dist
+    routes:
+      - type: rewrite
+        source: /*
+        destination: /index.html
     envVars:
       - key: VITE_API_URL
         value: https://etgagua-backend.onrender.com
